Adjust main template to prevent overflow, create experiments for components passing state

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -21,6 +21,8 @@
 
 .fix-container {
   position: absolute;
+  left: 0;
+  right: 0;
 }
 
 .loading-animation {
